[tool.poetry]
name = "ofscraper"
version = "0.0.0"
description = "automatically scrape onlyfans"
authors = ["datawhores <datawhores@riseup.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.0,<3.12"
httpx = {extras = ["http2"], version = "^0.23.3"}
inquirerpy = "^0.3.4"
setuptools = "^67.6.0"
schedule = "^1.1.0"
browser-cookie3 = "^0.17.1"
requests = "^2.28.2"
bs4 = "^0.0.1"
rich = "^13.3.2"
tenacity = "^8.2.2"
arrow = "^1.2.3"
win32-setctime = "^1.1.0"
pathvalidate = "^2.5.2"
xxhash = "^3.2.0"
mpegdash = "^0.3.1"
diskcache = "^5.6.1"
ffmpeg-python = "^0.2.0"
dunamai = "^1.17.0"
poetry-dynamic-versioning = "^0.22.0"
textual = "^0.27.0"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
faust-cchardet = "^2.1.18"
certifi = "^2023.5.7"
aiosqlite = "^0.19.0"
pycryptodome = "^3.18.0"
pywidevine = "^1.6.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-check = { version = "2.1.4", python = ">3.7" }
coverage = "^7.2.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
random-unicode-emoji = "^2.8"
random-emoji = "^1.0.15"





[tool.poetry.group.docs.dependencies]
sphinx-argparse = "^0.4.0"


[tool.poetry.group.testing.dependencies]
coverage = "^7.2.7"


[tool.poetry.group.build.dependencies]
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
ofscraper = "ofscraper.start:main"

[project.scripts]
ofscraper = "ofscraper.start:main"

[tool.poetry.urls]
"Homepage" = "https://github.com/datawhores/OF-Scraper"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.poetry-dynamic-versioning]
enable = true
vcs="git"
metadata=true
format="{base}"
pattern = "(?P<base>\d+\.\d+\.\d+)"
