[tool.poetry]
name = "ofscraper"
version = "0.0.0"
description = "automatically scrape onlyfans"
authors = ["datawhores <datawhores@riseup.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"


httpx = { extras = ["http2"], version = "^0.27.0" }
inquirerpy = "^0.3.4"
setuptools = "^69.1.1"
schedule = "^1.2.1"
browser-cookie3 = "0.19.1"
requests = "^2.31.0"
bs4 = "^0.0.2"
rich = "^13.7.1"
tenacity = "^8.2.3"
arrow = "^1.3.0"
win32-setctime = "^1.1.0"
pathvalidate = "^3.2.0"
xxhash = "^3.4.1"
mpegdash = "^0.4.0"
diskcache = "^5.6.3"
dunamai = "^1.19.2"
poetry-dynamic-versioning = "^1.2.0"
textual = "0.52.1"
aiohttp = { extras = ["speedups"], version = "^3.8.5" }
faust-cchardet = "^2.1.19"
certifi = "^2024.2.2"
pycryptodome = "^3.20.0"
pywidevine = "^1.8.0"
aioprocessing = "^2.0.1"
more-itertools = "^10.2.0"
psutil = "^5.9.8"
humanfriendly = "^10.0"
filelock = "^3.13.1"
aiofiles = "^23.2.1"
uvloop = { version = "^0.19.0", markers = "sys_platform == 'linux' or sys_platform == 'linux2'" }
aiosqlite = "^0.20.0"
speedtest-cli = "^2.1.3"
prompt-toolkit = "^3.0.43"
setproctitle = "^1.3.3"
lxml = "^5.1.0"
multiprocess = "^0.70.16"
dill = "^0.3.8"
cloup = "^3.0.5"
pynumparser = "^1.4.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
coverage = "^7.4.3"
pytest-cov = "^4.1.0"
random-unicode-emoji = "^2.8"
random-emoji = "^1.0.15"
pytest-mock = "^3.12.0"

[tool.poetry.group.docs.dependencies]
sphinx-argparse = "^0.4.0"


[tool.poetry.extras]
pyinstaller = ["pyinstaller"]


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
ofscraper = "ofscraper.__main__:main"


[tool.poetry.urls]
"Homepage" = "https://github.com/datawhores/OF-Scraper"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
metadata = true
format = "{base}"
pattern = "(?P<base>\\d+\\.\\d+\\.\\w+|\\d+\\.\\w+)"
