[project]
name = "ofscraper"
# The version is now determined from your Git tags by Hatch
dynamic = ["version"]
description = "automatically scrape onlyfans"
authors = [{ name = "datawhores", email = "datawhores@riseup.net" }]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
  "aiofiles~=23.2.1",
  "aiolimiter~=1.1.0",
  "aioprocessing~=2.0.1",
  "aiosqlite~=0.20.0",
  "arrow~=1.3.0",
  "async-property~=0.2.2",
  "browser-cookie3==0.19.1",
  "bs4~=0.0.2",
  "certifi~=2024.2.2",
  "cloup~=3.0.5",
  "dill~=0.3.8",
  "diskcache~=5.6.3",
  "faust-cchardet~=2.1.19",
  "filelock~=3.13.1",
  "humanfriendly~=10.0",
  "httpx[http2]~=0.28.1",
  "httpx-aiohttp~=0.1.2",
  "httpx-curl-cffi~=0.1.3",
  "idna==3.7",
  "inquirerpy~=0.3.4",
  "limiter~=0.5.0",
  "lxml~=5.1.0",
  "more-itertools~=10.2.0",
  "mpegdash~=0.4.0",
  "multiprocess~=0.70.16",
  "pathvalidate~=3.2.0",
  "prompt-toolkit~=3.0.43",
  "psutil~=5.9.8",
  "pycryptodome~=3.20.0",
  "pynumparser~=1.4.1",
  "pywidevine~=1.8.0",
  "requests~=2.31.0",
  "rich~=13.7.1",
  "schedule~=1.2.1",
  "setproctitle~=1.3.3",
  "speedtest-cli~=2.1.3",
  "tenacity~=8.2.3",
  "textual==1.0.0",
  "tqdm~=4.66.4",
  "uvloop~=0.19.0; sys_platform == 'linux' or sys_platform == 'linux2'",
  "win32-setctime~=1.1.0",
  "xxhash~=3.4.1",
  "pyyaml>=6.0.2",
  "dotenv>=0.9.9",
]


[project.optional-dependencies]
dev = ["autopep8~=2.0.2", "pyinstaller"]
test = [
  "pytest~=7.3.1",
  "coverage~=7.4.3",
  "pytest-cov~=4.1.0",
  "random-unicode-emoji~=2.8",
  "random-emoji~=1.0.15",
  "pytest-mock~=3.12.0",
]
docs = ["sphinx-argparse~=0.5.2"]
ffmpeg = ["pyffmpeg==2.4.2.20"]


[project.scripts]
ofscraper = "ofscraper.__main__:main"


[project.urls]
"Homepage" = "https://github.com/datawhores/OF-Scraper"


# --- Build System & Tool Configuration ---

[build-system]
# Use the standard, built-in hatch-vcs for versioning
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ofscraper"]

# Part 2: This tells Hatch to also include everything else.
# The "/" glob means "the project root". This ensures all your
# other files (README.md, config files, etc.) are included.
include = ["ofscraper"]

[tool.hatch.version]
source = "vcs"

# Properly escaped regex pattern
tag-pattern = "^(?:v)?(?P<version>[0-9]+\\.[0-9]+(?:\\.[0-9]+)?(?:\\.[a-zA-Z0-9]+)?)$"

# Add fallback version
fallback_version = "0.0.0"

# Simplified patterns
dev-pattern = "dev{distance}"
local-pattern = "+{node}"

# setuptools-scm configuration
[tool.setuptools_scm]
git_describe_command = ["git", "describe", "--dirty", "--tags"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
